2005-03-27 Shachar Shemesh
	* Change the license to explicitly allow linking with OpenSSL

Version 0.11
2005-03-11 Shachar Shemesh
	* Make sure encryption continues even if a file open fails with
	  permissions denied.
	* Fix incorrect rscerror parameter initialization
	* Fix "Aborted" on entire program in case of error

Version 0.10
2005-02-28 Shachar Shemesh
	* Fix accidental use of automake 1.4 to build the makefiles.
	* Fix bug where you couldn't use --trim with --filelist
	* Fix serious bug when --trim=0 and --delete where all encrypted files
	  were deleted, always.
	* Officially announce as "Beta"

Version 0.09
2005-02-27 Shachar Shemesh
	* Make sure that directories for key and encrypted files are created
	  when needed.
	* Implement the "filelist" option

2005-02-24 Shachar Shemesh
	* Document no password protected private key decryption bug in the man
	  page

Version 0.08
2005-02-22 Shachar Shemesh
	* Fix case of sometimes returning non-zero value on success from main.

Version 0.07
2005-02-20 Shachar Shemesh
	* Fix incorrect hyphens in manual page
	* Change autofd's copying method - use mutable "owner" boolean
	* Fix file descriptor leak in code
	* Fix spelling mistakes in rsyncrypto.man

Version 0.06
2005-02-17 Shachar Shemesh
	* Add an option for only encrypting modified files
	* Fix error in deleted file reporting
	* Fix a (mostly visual) error in file delete directory - extra / at
	  end
	* Change the verbosity level for deletion from 2 to 1
	* Add a manual page for rsyncrypto

2005-02-13 Shachar Shemesh
	* Fix bug in procssing of the "gzip" option
	* Add a "blocksize" utility for doing tests for optimal roll parameters

Version 0.05
2005-02-12 Shachar Shemesh
	* Implement recursive decryption of directory structure

2005-02-10 Shachar Shemesh
	* Implement recursive encryption of directory structures
	* Improve error reporting
	* Add "trim" to trim the begining of the path

2005-02-08 Shachar Shemesh